Added lower level api

--- a/07_Modular_RAG/07_02_Agentic_RAG.ipynb
+++ b/07_Modular_RAG/07_02_Agentic_RAG.ipynb
@@ -713,6 +713,113 @@
    "source": [
     "agent.chat(\"What kind of questions should I ask Balaji Srinivasan and Naval Ravikant?\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lower-level API\n",
+    "\n",
+    "<img src=\"https://docs.llamaindex.ai/en/stable/_static/agents/agent_step_execute.png\" width=\"70%\">\n",
+    "\n",
+    "\n",
+    "LlamaIndex \"agents\" are composed of `AgentRunner` objects that interact with `AgentWorkers`:\n",
+    "\n",
+    "- **[`AgentRunner`](https://github.com/run-llama/llama_index/blob/157309347b85ececd32630906a356a64bc319282/llama-index-core/llama_index/core/agent/runner/base.py#L200)**: These are the orchestrators that manage state (including conversational memory), create and maintain tasks, execute steps within each task, and provide the high-level interface for user interaction.\n",
+    "\n",
+    "- **[`AgentWorker`](https://github.com/run-llama/llama_index/blob/157309347b85ececd32630906a356a64bc319282/llama-index-legacy/llama_index/legacy/agent/types.py#L190)**: These control the step-wise execution of a task. Given an input step, an `AgentWorker` is responsible for generating the next step. They can be initialized with parameters and act on state passed down from the `Task` or `TaskStep` objects but do not inherently store state themselves. The outer `AgentRunner` calls an `AgentWorker` and collects/aggregates the results.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.core.agent import FunctionCallingAgentWorker\n",
+    "from llama_index.core.agent import AgentRunner\n",
+    "\n",
+    "agent_worker = FunctionCallingAgentWorker.from_tools(\n",
+    "    [auto_retrieve_tool], \n",
+    "    llm=Settings.llm, \n",
+    "    verbose=True\n",
+    ")\n",
+    "agent_runner = AgentRunner(agent_worker, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> Running step 46ddad01-848c-4857-9e6f-84aaccffc39e. Step input: In what ways do Naval and Nassim think differently about the risk and accountability?\n",
+      "Added user message to memory: In what ways do Naval and Nassim think differently about the risk and accountability?\n",
+      "=== Calling Function ===\n",
+      "Calling function: words-of-senpai-info with args: {\"query\": \"risk\", \"filter_key_list\": [\"author\"], \"filter_value_list\": [\"Naval Ravikant\"]}\n",
+      "=== Function Output ===\n",
+      "Risk, in the context of evaluating decision-making processes, can significantly impact outcomes. For instance, if there is a possibility of ruin, traditional cost-benefit analyses become invalid because they cannot account for irreversible consequences. An example is playing Russian roulette; despite a high chance of immediate gain, the ultimate risk of fatality makes the expected return non-computable. In the realm of new tech businesses, regulatory risks are a critical factor, often outweighing technological barriers. Antiquated regulations can hold back significant value, as seen with the disruption caused by companies like Uber and Airbnb, which overcame outdated laws to unlock billions in equity value.\n",
+      "=== Calling Function ===\n",
+      "Calling function: words-of-senpai-info with args: {\"query\": \"accountability\", \"filter_key_list\": [\"author\"], \"filter_value_list\": [\"Naval Ravikant\"]}\n",
+      "=== Function Output ===\n",
+      "Accountability involves having a personal stake in the outcome, where individuals are exposed to both the potential rewards and risks of their decisions. In the context of building a company, it means that the company's name is tied to high-risk, high-reward efforts, and people within the company devote their lives to it, taking on significant personal risk. This creates a scenario where there is massive accountability, ensuring that the individuals involved are motivated to succeed and bear the consequences of their actions.\n",
+      "=== Calling Function ===\n",
+      "Calling function: words-of-senpai-info with args: {\"query\": \"risk\", \"filter_key_list\": [\"author\"], \"filter_value_list\": [\"Nassim Nicholas Taleb\"]}\n",
+      "=== Function Output ===\n",
+      "Risk, particularly in the context of cost-benefit analyses and regulatory challenges, can be multifaceted. For instance, when there is a possibility of ruin, as illustrated by an extreme example like Russian roulette, standard cost-benefit analyses become unreliable because the potential for irreversible negative outcomes makes the expected return non-computable. On the other hand, for new tech businesses, regulatory risks arise from outdated laws that can inhibit innovation and growth, as seen in fields like genomics or drone technology. These barriers can prevent the realization of significant value, much like how outdated taxi and hotel regulations previously limited the potential of companies like Uber and Airbnb. Identifying and navigating these regulatory risks is crucial for unlocking new opportunities and achieving success in the tech industry.\n",
+      "=== Calling Function ===\n",
+      "Calling function: words-of-senpai-info with args: {\"query\": \"accountability\", \"filter_key_list\": [\"author\"], \"filter_value_list\": [\"Nassim Nicholas Taleb\"]}\n",
+      "=== Function Output ===\n",
+      "Accountability, in the context provided, refers to the concept of individuals or entities being responsible for the outcomes of their actions, particularly when they have a personal stake in those outcomes. In Nassim Nicholas Taleb's book \"Skin in the Game,\" accountability is tied to the idea of having a share of the harm and paying a penalty if something goes wrong, ensuring that one's incentives and risks are aligned. In Naval Ravikant's \"The Almanack of Naval Ravikant,\" accountability involves taking significant risks and being highly responsible for the success or failure of a venture, where the company's name and individuals' reputations are on the line.\n",
+      "> Running step 5f04843a-c7f9-4d40-aea1-ced3bdedd83a. Step input: None\n",
+      "=== LLM Response ===\n",
+      "Naval Ravikant and Nassim Nicholas Taleb offer nuanced perspectives on risk and accountability, each emphasizing different aspects of these concepts:\n",
+      "\n",
+      "### Naval Ravikant on Risk:\n",
+      "- **Technological and Regulatory Risks**: Naval highlights the importance of regulatory risks, especially in the context of new tech businesses. He points out that outdated regulations can be significant barriers to innovation, as seen with companies like Uber and Airbnb. Despite technological readiness, the primary risks often come from navigating and overcoming these regulatory hurdles.\n",
+      "- **Irreversible Consequences**: Naval also acknowledges that in high-stakes situations, such as playing Russian roulette, traditional cost-benefit analyses fail because they can't account for the irreversible negative outcomes.\n",
+      "\n",
+      "### Nassim Nicholas Taleb on Risk:\n",
+      "- **Possibility of Ruin**: Taleb emphasizes the concept of \"ruin,\" where the potential for catastrophic failure makes standard cost-benefit analyses unreliable. He uses extreme examples like Russian roulette to illustrate situations where the risk of irreversible negative outcomes invalidates traditional decision-making frameworks.\n",
+      "- **Regulatory Barriers in Tech**: Similar to Naval, Taleb discusses regulatory risks in the tech industry, pointing out that outdated laws can inhibit innovation and growth. He underscores the importance of identifying and navigating these regulatory barriers to unlock opportunities.\n",
+      "\n",
+      "### Naval Ravikant on Accountability:\n",
+      "- **Personal Stake and Motivation**: Naval believes that accountability involves having a substantial personal stake in the outcome. In the context of building a company, this means that individuals are deeply invested, taking on significant personal risks, which ensures they are highly motivated to succeed and bear the consequences of their actions.\n",
+      "\n",
+      "### Nassim Nicholas Taleb on Accountability:\n",
+      "- **Skin in the Game**: Taleb's concept of accountability is closely tied to his idea of \"Skin in the Game,\" where individuals must have a share of the harm and pay a penalty if things go wrong. This alignment of incentives and risks ensures that decision-makers are responsible for the outcomes of their actions.\n",
+      "\n",
+      "### Key Differences:\n",
+      "- **Focus on Regulatory Risks**: While both thinkers acknowledge regulatory risks, Naval focuses more on the modern tech industry, whereas Taleb provides a broader critique of how outdated regulations can stifle innovation.\n",
+      "- **Accountability Mechanisms**: Naval emphasizes personal investment and motivation within ventures, whereas Taleb stresses the importance of having a direct stake in the outcomes, ensuring that one's incentives are aligned with the risks.\n",
+      "\n",
+      "In summary, both Naval and Taleb offer valuable insights into risk and accountability, with Naval focusing on regulatory challenges in tech and personal stakes in ventures, and Taleb emphasizing the critical importance of avoiding ruin and ensuring aligned incentives through skin in the game.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "AgentChatResponse(response='assistant: Naval Ravikant and Nassim Nicholas Taleb offer nuanced perspectives on risk and accountability, each emphasizing different aspects of these concepts:\\n\\n### Naval Ravikant on Risk:\\n- **Technological and Regulatory Risks**: Naval highlights the importance of regulatory risks, especially in the context of new tech businesses. He points out that outdated regulations can be significant barriers to innovation, as seen with companies like Uber and Airbnb. Despite technological readiness, the primary risks often come from navigating and overcoming these regulatory hurdles.\\n- **Irreversible Consequences**: Naval also acknowledges that in high-stakes situations, such as playing Russian roulette, traditional cost-benefit analyses fail because they can\\'t account for the irreversible negative outcomes.\\n\\n### Nassim Nicholas Taleb on Risk:\\n- **Possibility of Ruin**: Taleb emphasizes the concept of \"ruin,\" where the potential for catastrophic failure makes standard cost-benefit analyses unreliable. He uses extreme examples like Russian roulette to illustrate situations where the risk of irreversible negative outcomes invalidates traditional decision-making frameworks.\\n- **Regulatory Barriers in Tech**: Similar to Naval, Taleb discusses regulatory risks in the tech industry, pointing out that outdated laws can inhibit innovation and growth. He underscores the importance of identifying and navigating these regulatory barriers to unlock opportunities.\\n\\n### Naval Ravikant on Accountability:\\n- **Personal Stake and Motivation**: Naval believes that accountability involves having a substantial personal stake in the outcome. In the context of building a company, this means that individuals are deeply invested, taking on significant personal risks, which ensures they are highly motivated to succeed and bear the consequences of their actions.\\n\\n### Nassim Nicholas Taleb on Accountability:\\n- **Skin in the Game**: Taleb\\'s concept of accountability is closely tied to his idea of \"Skin in the Game,\" where individuals must have a share of the harm and pay a penalty if things go wrong. This alignment of incentives and risks ensures that decision-makers are responsible for the outcomes of their actions.\\n\\n### Key Differences:\\n- **Focus on Regulatory Risks**: While both thinkers acknowledge regulatory risks, Naval focuses more on the modern tech industry, whereas Taleb provides a broader critique of how outdated regulations can stifle innovation.\\n- **Accountability Mechanisms**: Naval emphasizes personal investment and motivation within ventures, whereas Taleb stresses the importance of having a direct stake in the outcomes, ensuring that one\\'s incentives are aligned with the risks.\\n\\nIn summary, both Naval and Taleb offer valuable insights into risk and accountability, with Naval focusing on regulatory challenges in tech and personal stakes in ventures, and Taleb emphasizing the critical importance of avoiding ruin and ensuring aligned incentives through skin in the game.', sources=[ToolOutput(content='Risk, in the context of evaluating decision-making processes, can significantly impact outcomes. For instance, if there is a possibility of ruin, traditional cost-benefit analyses become invalid because they cannot account for irreversible consequences. An example is playing Russian roulette; despite a high chance of immediate gain, the ultimate risk of fatality makes the expected return non-computable. In the realm of new tech businesses, regulatory risks are a critical factor, often outweighing technological barriers. Antiquated regulations can hold back significant value, as seen with the disruption caused by companies like Uber and Airbnb, which overcame outdated laws to unlock billions in equity value.', tool_name='words-of-senpai-info', raw_input={'args': (), 'kwargs': {'query': 'risk', 'filter_key_list': ['author'], 'filter_value_list': ['Naval Ravikant']}}, raw_output='Risk, in the context of evaluating decision-making processes, can significantly impact outcomes. For instance, if there is a possibility of ruin, traditional cost-benefit analyses become invalid because they cannot account for irreversible consequences. An example is playing Russian roulette; despite a high chance of immediate gain, the ultimate risk of fatality makes the expected return non-computable. In the realm of new tech businesses, regulatory risks are a critical factor, often outweighing technological barriers. Antiquated regulations can hold back significant value, as seen with the disruption caused by companies like Uber and Airbnb, which overcame outdated laws to unlock billions in equity value.', is_error=False), ToolOutput(content=\"Accountability involves having a personal stake in the outcome, where individuals are exposed to both the potential rewards and risks of their decisions. In the context of building a company, it means that the company's name is tied to high-risk, high-reward efforts, and people within the company devote their lives to it, taking on significant personal risk. This creates a scenario where there is massive accountability, ensuring that the individuals involved are motivated to succeed and bear the consequences of their actions.\", tool_name='words-of-senpai-info', raw_input={'args': (), 'kwargs': {'query': 'accountability', 'filter_key_list': ['author'], 'filter_value_list': ['Naval Ravikant']}}, raw_output=\"Accountability involves having a personal stake in the outcome, where individuals are exposed to both the potential rewards and risks of their decisions. In the context of building a company, it means that the company's name is tied to high-risk, high-reward efforts, and people within the company devote their lives to it, taking on significant personal risk. This creates a scenario where there is massive accountability, ensuring that the individuals involved are motivated to succeed and bear the consequences of their actions.\", is_error=False), ToolOutput(content='Risk, particularly in the context of cost-benefit analyses and regulatory challenges, can be multifaceted. For instance, when there is a possibility of ruin, as illustrated by an extreme example like Russian roulette, standard cost-benefit analyses become unreliable because the potential for irreversible negative outcomes makes the expected return non-computable. On the other hand, for new tech businesses, regulatory risks arise from outdated laws that can inhibit innovation and growth, as seen in fields like genomics or drone technology. These barriers can prevent the realization of significant value, much like how outdated taxi and hotel regulations previously limited the potential of companies like Uber and Airbnb. Identifying and navigating these regulatory risks is crucial for unlocking new opportunities and achieving success in the tech industry.', tool_name='words-of-senpai-info', raw_input={'args': (), 'kwargs': {'query': 'risk', 'filter_key_list': ['author'], 'filter_value_list': ['Nassim Nicholas Taleb']}}, raw_output='Risk, particularly in the context of cost-benefit analyses and regulatory challenges, can be multifaceted. For instance, when there is a possibility of ruin, as illustrated by an extreme example like Russian roulette, standard cost-benefit analyses become unreliable because the potential for irreversible negative outcomes makes the expected return non-computable. On the other hand, for new tech businesses, regulatory risks arise from outdated laws that can inhibit innovation and growth, as seen in fields like genomics or drone technology. These barriers can prevent the realization of significant value, much like how outdated taxi and hotel regulations previously limited the potential of companies like Uber and Airbnb. Identifying and navigating these regulatory risks is crucial for unlocking new opportunities and achieving success in the tech industry.', is_error=False), ToolOutput(content='Accountability, in the context provided, refers to the concept of individuals or entities being responsible for the outcomes of their actions, particularly when they have a personal stake in those outcomes. In Nassim Nicholas Taleb\\'s book \"Skin in the Game,\" accountability is tied to the idea of having a share of the harm and paying a penalty if something goes wrong, ensuring that one\\'s incentives and risks are aligned. In Naval Ravikant\\'s \"The Almanack of Naval Ravikant,\" accountability involves taking significant risks and being highly responsible for the success or failure of a venture, where the company\\'s name and individuals\\' reputations are on the line.', tool_name='words-of-senpai-info', raw_input={'args': (), 'kwargs': {'query': 'accountability', 'filter_key_list': ['author'], 'filter_value_list': ['Nassim Nicholas Taleb']}}, raw_output='Accountability, in the context provided, refers to the concept of individuals or entities being responsible for the outcomes of their actions, particularly when they have a personal stake in those outcomes. In Nassim Nicholas Taleb\\'s book \"Skin in the Game,\" accountability is tied to the idea of having a share of the harm and paying a penalty if something goes wrong, ensuring that one\\'s incentives and risks are aligned. In Naval Ravikant\\'s \"The Almanack of Naval Ravikant,\" accountability involves taking significant risks and being highly responsible for the success or failure of a venture, where the company\\'s name and individuals\\' reputations are on the line.', is_error=False)], source_nodes=[], is_dummy_stream=False)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agent_runner.chat(\"In what ways do Naval and Nassim think differently about the risk and accountability?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
