--- a/07_Modular_RAG/07_02_Agentic_RAG.ipynb
+++ b/07_Modular_RAG/07_02_Agentic_RAG.ipynb
@@ -426,11 +426,7 @@
    "source": [
     "## Auto Retriever Functional Tool\n",
     "\n",
-    "This tool will leverage OpenAI's functional endpoint to select the correct metadata filter and query the filtered index - only looking at nodes with the desired metadata.\n",
-    "\n",
-    "A simplified diagram: ![image](https://i.imgur.com/AICDPav.png)\n",
-    "\n",
-    "[Source: AI Makerspace](https://www.youtube.com/watch?v=wYZJq8CNmTw&t=3s)"
+    "This tool will leverage OpenAI's functional endpoint to select the correct metadata filter and query the filtered index - only looking at nodes with the desired metadata.\n"
    ]
   },
   {
@@ -511,6 +507,44 @@
     "    tools=[auto_retrieve_tool],\n",
     "    verbose=True,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How does the agent work?\n",
+    "\n",
+    "A user's query is processed through a query engine, transformed, and then filtered and retrieved from a vector database to provide a relevant response.\n",
+    "\n",
+    "A simplified diagram: ![image](https://i.imgur.com/AICDPav.png)\n",
+    "\n",
+    "[Source: AI Makerspace](https://www.youtube.com/watch?v=wYZJq8CNmTw&t=3s)\n",
+    "\n",
+    "1. **User Query**:\n",
+    "   - A user inputs a query.\n",
+    "\n",
+    "2. **Query Engine**:\n",
+    "   - The query is first sent to the `QueryEngineRetriever` application, which is part of the Query Engine system.\n",
+    "   - The `QueryEngineRetriever` then interacts with the `VectorStoreData` application to process the query further.\n",
+    "\n",
+    "3. **OpenAI API**:\n",
+    "   - The `VectorStoreData` communicates with two models from the OpenAI API:\n",
+    "     - **Language Model**: Understands and generate coherent responses based on the query.\n",
+    "     - **Embedding Model**: Converts the query and data into vector representations for easier processing and retrieval.\n",
+    "\n",
+    "4. **Vector Store**:\n",
+    "   - The processed information is sent to a `Vector Database` within the Vector Store system.\n",
+    "   - The `Vector Database` stores the vectorized data and can filter it based on metadata through the `Metadata Filter` application.\n",
+    "   - This filtering process results in a `Filtered List of Nodes`, which represents the most relevant pieces of information related to the query.\n",
+    "\n",
+    "5. **Result Compilation**:\n",
+    "   - The filtered information is sent back to the `VectorStoreData` application, which compiles the final response.\n",
+    "   - This compiled response is then sent back to the `QueryEngineRetriever` application.\n",
+    "\n",
+    "6. **Response Display**:\n",
+    "   - Finally, the processed and relevant information is displayed to the user as the plot synopsis in the top right box.\n",
+    "\n"
    ]
   },
   {
