--- a/07_Modular_RAG/07_03_Ensemble_Retrieval.ipynb
+++ b/07_Modular_RAG/07_03_Ensemble_Retrieval.ipynb
@@ -4,18 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Ensemble Retrieval\n",
     "\n",
-    "# Ensemble Retrieval Guide\n",
     "\n",
-    "When building RAG applications, there are numerous retrieval parameters and strategies to consider, such as chunk size, vector search, keyword search, and hybrid search.\n",
+    "When building retrieval-augmented generation (RAG) applications, various retrieval parameters and strategies must be considered, such as chunk size, vector search, keyword search, and hybrid search.\n",
     "\n",
-    "**Idea**: What if we could try multiple strategies simultaneously and use an AI/reranker/LLM to prune the results?\n",
+    "**Concept**: What if we could simultaneously try multiple strategies and use an AI/reranker/LLM to prune the results?\n",
     "\n",
     "This approach serves two main purposes:\n",
     "\n",
     "1. **Enhanced Retrieval**: By pooling results from multiple strategies, we can achieve better (though more costly) retrieved results, assuming the reranker is effective.\n",
     "\n",
-    "2. **Benchmarking**: It provides a way to benchmark different retrieval strategies against each other with respect to the reranker.\n"
+    "2. **Benchmarking**: It provides a way to benchmark different retrieval strategies against each other with respect to the reranker.\n",
+    "\n",
+    "## Key Purposes of the Ensemble Retriever\n",
+    "\n",
+    "1. **Multi-Strategy Retrieval**: Try multiple retrieval strategies simultaneously, such as different chunk sizes and index types (vector, keyword, hybrid search). This allows for comparing the effectiveness of various approaches in one shot.\n",
+    "\n",
+    "2. **Pooling Results**: Pool results from different retrieval strategies, leading to better overall retrieved results, assuming an effective reranker is used to prune the ensemble results.\n",
+    "\n",
+    "3. **Benchmarking Performance**: Benchmark and compare the performance of different retrieval strategies against each other with respect to the reranker.\n"
    ]
   },
   {
@@ -183,19 +191,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define Ensemble Retriever\n",
+    "## How to Create an Ensemble Retriever\n",
     "\n",
-    "We set up an \"ensemble\" retriever using our recursive retrieval abstraction. The process works as follows:\n",
+    "1. **Define Index Nodes**: Create separate index nodes for each retrieval strategy you want to try (e.g., retrievers for different chunk sizes).\n",
     "\n",
-    "1. **Define Index Nodes**: Create a separate `IndexNode` for the vector retriever corresponding to each chunk size (e.g., a retriever for chunk size 128, another for chunk size 256, etc.).\n",
+    "2. **Create a Summary Index**: Combine all the index nodes into a single summary index.\n",
     "\n",
-    "2. **Aggregate Index Nodes**: Combine all `IndexNodes` into a single `SummaryIndex`. When this retriever is called, *all* nodes are returned.\n",
+    "3. **Set Up a Recursive Retriever**: Define a recursive retriever with the root node being the summary index retriever. This will fetch results from all the underlying retrievers when a query is run.\n",
     "\n",
-    "3. **Recursive Retriever Setup**: Define a Recursive Retriever with the root node being the summary index retriever. This retriever will first fetch all nodes from the summary index and then recursively call the vector retriever for each chunk size.\n",
+    "4. **Define a Reranker**: Use a reranker (e.g., LLM-based, Cohere, Sentence Transformer) to process and prune the final retrieved set of nodes.\n",
     "\n",
-    "4. **Rerank Final Results**: Rerank the results obtained from all vector retrievers.\n",
+    "5. **Integrate with a Query Engine**: Create a retriever query engine that combines the recursive retriever and the reranker.\n",
     "\n",
-    "By following this setup, all vector retrievers are called when a query is executed, ensuring comprehensive retrieval.\n"
+    "6. **Run Queries**: Execute queries through the retriever query engine to get results that leverage the ensemble of retrievers, postprocessed by the reranker.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The code below...\n",
+    "\n",
+    "•  **Define Index Nodes**: Create a separate `IndexNode` for the vector retriever corresponding to each chunk size (e.g., a retriever for chunk size 128, another for chunk size 256, etc.).\n",
+    "\n"
    ]
   },
   {
@@ -227,7 +245,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define the recursive retriever"
+    "• **Aggregate Index Nodes**: Combine all `IndexNodes` into a single `SummaryIndex`. When this retriever is called, *all* nodes are returned.\n",
+    "\n",
+    "\n",
+    "•  **Recursive Retriever Setup**: Define a Recursive Retriever with the root node being the summary index retriever. This retriever will first fetch all nodes from the summary index and then recursively call the vector retriever for each chunk size.\n"
    ]
   },
   {
@@ -301,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define a reranker to process the final set of retrieved nodes"
+    "**Rerank Final Results**: Rerank the results obtained from all vector retrievers.\n"
    ]
   },
   {
