adding more text

--- a/07_Modular_RAG/07_03_Ensemble_Retrieval.ipynb
+++ b/07_Modular_RAG/07_03_Ensemble_Retrieval.ipynb
@@ -222,12 +222,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from llama_index.core.tools import RetrieverTool\n",
     "from llama_index.core.schema import IndexNode\n",
     "\n",
-    "\n",
     "retriever_dict = {}\n",
+    "\n",
     "retriever_nodes = []\n",
+    "\n",
     "for chunk_size, vector_index in zip(chunk_sizes, vector_indices):\n",
     "    node_id = f\"chunk_{chunk_size}\"\n",
     "    node = IndexNode(\n",
@@ -245,10 +245,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "• **Aggregate Index Nodes**: Combine all `IndexNodes` into a single `SummaryIndex`. When this retriever is called, *all* nodes are returned.\n",
+    "**Aggregate Index Nodes**: Combine all `IndexNodes` into a single `SummaryIndex`. \n",
+    "\n",
+    "[`SummaryIndex`](https://github.com/run-llama/llama_index/blob/7849b1a851d88ee28e1bfd05d19f18e40d5b8e10/llama-index-core/llama_index/core/indices/list/base.py#L33)  is a simple list-based data structure. During index construction, `SummaryIndex` takes in a dataset of text documents as input, chunks them up into smaller document chunks, and concatenates them into a list.\n",
     "\n",
     "\n",
-    "•  **Recursive Retriever Setup**: Define a Recursive Retriever with the root node being the summary index retriever. This retriever will first fetch all nodes from the summary index and then recursively call the vector retriever for each chunk size.\n"
+    "*Index Construction*\n",
+    "\n",
+    "1. **Chunking**: The document texts are divided into chunks.\n",
+    "2. **Node Creation**: Each chunk is converted into a node.\n",
+    "3. **Storage**: These nodes are stored in a list.\n",
+    "\n",
+    "*Query Time*\n",
+    "\n",
+    "An initial answer to the query is constructed using the first text chunk. The answer is then refined through feeding in subsequent text chunks as context. Refinement could mean keeping the original answer, making small edits to the original answer, or rewriting the original answer completely.\n",
+    "\n",
+    "1. **Iteration**: The summary index iterates through the nodes.\n",
+    "2. **Optional Filtering**: Some filter parameters can be applied.\n",
+    "3. **Answer Synthesis**: An answer is synthesized from all the nodes.\n",
+    "\n",
+    "When this retriever is called, **all** nodes are returned.\n",
+    "\n",
+    "**Recursive Retriever Setup**: Define a Recursive Retriever with the root node being the summary index retriever. This retriever will first fetch all nodes from the summary index and then recursively call the vector retriever for each chunk size.\n",
+    "\n",
+    "1. **Recursive Exploration**: The retriever will follow links from nodes to other retrievers or query engines.\n",
+    "\n",
+    "2. **IndexNode Handling**: For any retrieved nodes that are `IndexNodes`, it will:\n",
+    "    - Explore the linked retriever or query engine.\n",
+    "    - Query the linked retriever or query engine.\n"
    ]
   },
   {
@@ -257,9 +281,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from llama_index.core.selectors import PydanticMultiSelector\n",
-    "\n",
-    "from llama_index.core.retrievers import RouterRetriever\n",
     "from llama_index.core.retrievers import RecursiveRetriever\n",
     "from llama_index.core import SummaryIndex\n",
     "\n",
