--- a/07_Modular_RAG/07_04_Ensemble_Query_Engine.ipynb
+++ b/07_Modular_RAG/07_04_Ensemble_Query_Engine.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ensemble Query Engine Guide\n",
+    "# Ensemble Query Engine\n",
     "\n",
     "When building a retrieval-augmented generation (RAG) application, experimenting with various query pipelines—such as top-k retrieval, keyword search, and knowledge graphs—is often necessary.\n",
     "\n",
@@ -181,39 +181,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9fe0852841b543b79c1c6446d1e5cf6b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Extracting keywords from nodes:   0%|          | 0/259 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36dcda76ed484e59899cb5a37812fec2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating embeddings:   0%|          | 0/259 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "source": [
+    "### [`SimpleKeywordTableIndex`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/indices/keyword_table/simple_base.py) Class Overview\n",
+    "\n",
+    "The `SimpleKeywordTableIndex` class is a simplified version of a keyword-based indexing system. \n",
+    "\n",
+    "During index construction, the KeywordTableIndex takes a dataset of text documents, chunks them, and uses GPT to extract relevant keywords. These keywords are stored in a table referencing the respective text chunk. \n",
+    "\n",
+    "During a query, the KeywordTableIndex extracts relevant keywords and uses them to retrieve a set of candidate text chunk IDs. The initial answer is constructed using the first text chunk and then refined with subsequent chunks.\n",
+    "\n",
+    "- **Index Construction**: \n",
+    "    - Splits text documents into chunks.\n",
+    "    - Extracts keywords for each chunk.\n",
+    "    - Stores keywords in a table referencing the text chunks.\n",
+    "\n",
+    "- **Query Modes**:\n",
+    "    - **Default**: Uses GPT for keyword extraction and constructs answers by refining text chunks.\n",
+    "    - **Simple**: Uses regex for keyword extraction (implemented by `SimpleKeywordTableIndex`).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from llama_index.core import SimpleKeywordTableIndex, VectorStoreIndex\n",
     "\n",
@@ -320,6 +313,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [QueryEngineTool](https://github.com/run-llama/llama_index/blob/7849b1a851d88ee28e1bfd05d19f18e40d5b8e10/llama-index-core/llama_index/core/tools/query_engine.py#L17)\n",
+    "\n",
+    "Tools are abstractions designed to be used by data agents or LLMs and provide a structured way for them to perform tasks\n",
+    "\n",
+    "A `QueryEngineTool` is a specific type of tool designed to interface with and wrap existing query engines. It enables agents to perform complex queries by leveraging the capabilities of the underlying query engine.\n",
+    "\n",
+    "#### Use Cases\n",
+    "\n",
+    "- **Integrating Query Engines**: Allows agents to interact with query engines and other agents.\n",
+    "\n",
+    "- **Complex Query Handling**: Helps execute sophisticated queries and data retrieval operations."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -342,7 +352,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define a Router Query Engine"
+    "## Define a Router Query Engine\n",
+    "\n",
+    "The [`LLMMultiSelector`](https://github.com/run-llama/llama_index/blob/7849b1a851d88ee28e1bfd05d19f18e40d5b8e10/llama-index-core/llama_index/core/selectors/llm_selectors.py#L141) uses LLMs to make decisions. Uses a prompt to present choices to the LLM, which then selects the most relevant options based on the query. It can be used alone or integrated into query engines and retrievers. \n",
+    "\n",
+    "#### Key Functions:\n",
+    "\n",
+    "1. **Data Source Selection**: Chooses the best data source from multiple options.\n",
+    "\n",
+    "2. **Operational Decisions**: Decides whether to perform summarization or semantic search.\n",
+    "\n",
+    "3. **Multi-Routing**: Evaluates multiple choices simultaneously and combines the results.\n",
+    "\n",
+    "\n",
+    "### Use Cases\n",
+    "\n",
+    "- Selecting the right data source.\n",
+    "- Choosing between summarization and semantic search.\n",
+    "- Combining results from multiple choices.\n"
    ]
   },
   {
@@ -352,11 +379,8 @@
    "outputs": [],
    "source": [
     "from llama_index.core.query_engine import RouterQueryEngine\n",
-    "from llama_index.core.selectors import LLMSingleSelector, LLMMultiSelector\n",
-    "from llama_index.core.selectors import (\n",
-    "    PydanticMultiSelector,\n",
-    "    PydanticSingleSelector,\n",
-    ")\n",
+    "from llama_index.core.selectors import LLMMultiSelector\n",
+    "\n",
     "from llama_index.core.response_synthesizers import TreeSummarize\n",
     "\n",
     "TREE_SUMMARIZE_PROMPT_TMPL = \"\"\"\n",
@@ -410,6 +434,19 @@
     "    \"How can I develop specific knowledge that will help me build wealth and achieve happiness?\"\n",
     ")\n",
     "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.core.response.notebook_utils import display_response\n",
+    "\n",
+    "display_response(\n",
+    "    response, show_source=True, source_length=500, show_source_metadata=True\n",
+    ")"
    ]
   },
   {
