consistent with videos

--- a/07_Modular_RAG/07_02_Agentic_RAG.ipynb
+++ b/07_Modular_RAG/07_02_Agentic_RAG.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "# Agentic RAG using Data Agents\n",
-    "\n",
-    "We've actually touched on a couple of simpler agentic strategies already, namely Query Transformations and the Sub Question Query Engine.\n",
-    "\n",
-    "In this lesson, we're going to take this one step further.\n",
-    "\n",
-    "\n",
-    "# 🕵️ Agents\n",
+    "# 🕵️ Agentic RAG using Data Agents\n",
     "\n",
     "## 🧠 Concept\n",
     "\n",
@@ -517,7 +509,9 @@
     "\n",
     "A user's query is processed through a query engine, transformed, and then filtered and retrieved from a vector database to provide a relevant response.\n",
     "\n",
-    "A simplified diagram: ![image](https://i.imgur.com/AICDPav.png)\n",
+    "A simplified diagram: \n",
+    "\n",
+    "<img src=\"https://i.imgur.com/AICDPav.png\" width=\"50%\">\n",
     "\n",
     "[Source: AI Makerspace](https://www.youtube.com/watch?v=wYZJq8CNmTw&t=3s)\n",
     "\n",
